Adding button for a new game

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
     <script src="compiled/app/views/AppView.js"></script>
 
     <script src="compiled/app/main.js"></script>
+    <div class="newGameOptions">
+      <button id="startNewGame" style="display:none">Start New Game?</button>
+    </div>
   </body>
 
 </html>
