--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
   
   <body>
     <script id="app-template" type="text/template">
-      <div class="dealer-hand-container"></div>
-      <div class="player-hand-container"></div>
-      <div class="button-holder">
-         <div class='button-box'>
-           <button class="hit-button">Hit</button>
-         </div>
-         <div class='button-box'>
-           <button class="stand-button">Stand</button>
-         </div>
-      </div>
+      // <div class="dealer-hand-container"></div>
+      // <div class="player-hand-container"></div>
+      // <div class="button-holder">
+      //    <div class='button-box'>
+      //      <button class="hit-button">Hit</button>
+      //    </div>
+      //    <div class='button-box'>
+      //      <button class="stand-button">Stand</button>
+      //    </div>
+      // </div>
     </script>
     <script id="hand-view" type="text/template">
       <h2>
@@ -36,9 +36,7 @@
     <script src="compiled/app/views/AppView.js"></script>
 
     <script src="compiled/app/main.js"></script>
-    <div class="newGameOptions">
-      <button id="startNewGame" style="display:none">Start New Game?</button>
-    </div>
+    
   </body>
 
 </html>
